syntax = "proto3";

option csharp_namespace = "Genie.Extensions.Genius";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service GeniusService {
    rpc Process (GeniusRequest) returns (GeniusResponse);
	rpc Status (StatusRequest) returns (GeniusResponse);
}

message GeniusRequest {	
	StatusRequest request = 1;
	string key = 2;
	google.protobuf.Any value = 3;
	google.protobuf.Timestamp timestamp = 4;
}


message StatusRequest {
	string topic = 1;
	int32 offset = 2;
}

message GeniusResponse {
	enum ResponseLevel {
		Queued = 0;
		Processed = 1;
		Errored = 2;
		Info = 3;
	}
	ResponseLevel level = 1;
	google.protobuf.Any response = 2;
	string message  = 3;
	string exception = 4;
}